<resources>
    <string name="app_name">Aplicacion Sophos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_fingerprint">Sign in with fingerprint</string>
    <string name="welcome">Welcome !</string>
    <string name="options">These are the options we have for you</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="SendDocument">Send Document</string>
    <string name="WatchDocument">Watch Document</string>
    <string name="Office">Office</string>
    <string name="Language">Language</string>
    <string name="Nightmode">Night Mode</string>
    <string name="previous">previous</string>
    <string name="enter">Enter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="Email">Mail</string>
    <string name="City">City</string>
    <string name="attached">Attached type</string>
    <string name="DocumentNumber">Document Number</string>
    <string name="DataAccess">Enter your data to access</string>
    <string name="Document">Document</string>
    <string name="Send">Send</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_ofice_maps">OficeMapsActivity</string>
    <string name="title_activity_watch_document">WatchDocumentActivity</string>
</resources>