<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SendData.SendDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/DataAccess"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl2" />

        <ImageButton
            android:id="@+id/Camerabutton2"
            android:layout_width="118dp"
            android:layout_height="111dp"
            android:layout_marginTop="50dp"
            android:background="#00000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/add_a_photo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/rl2"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Camerabutton2"
            tools:context=".data.model."
            tools:ignore="MissingConstraints"

            tools:layout_editor_absoluteY="270dp">

            <Spinner
                android:id="@+id/spinner_documenttype2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edtDocumentnumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/badge"
                android:ems="10"
                android:inputType="number"
                android:pointerIcon="context_menu"
                android:hint="@string/DocumentNumber" />

            <EditText
                android:id="@+id/edtName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edtlastname2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/lastname" />

            <EditText
                android:id="@+id/edtemail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Email" />

            <EditText
                android:id="@+id/attachedtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/attached" />
            <EditText
                android:id="@+id/edtcity2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:hint="@string/City"/>

            <Spinner
                android:id="@+id/spinnercity2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />


        </LinearLayout>

        <Button
            android:id="@+id/Loadfile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/backup"
            android:textAllCaps="false"
            android:text="@string/Document"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.364"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/pinkactivity"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/Sendfile2"
            android:layout_width="136dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@color/pinkactivity"
            android:textAllCaps="false"
            android:text="@string/Send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Loadfile2"
            app:layout_constraintVertical_bias="0.014" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>